tests/code/pages/errors/out-of-scope.tht

$a = 3
if false {
    print($b)
}
